--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script type='text/javascript' src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCZOXlIZdfYBcn_W8UrY-JYrE3eueQq4_k&libraries=geometry'></script>
+    <script type='text/javascript' src='https://maps.googleapis.com/maps/api/js?key=GOOGLEMAPS_API_KEY&libraries=geometry'></script>
     <script type="text/javascript">
     jQuery.extend({
       random: function(X) {
